[gd_scene load_steps=15 format=3 uid="uid://cuhcvnpc1p75x"]

[ext_resource type="Script" path="res://scripts/game_manager.gd" id="1_2dx0v"]
[ext_resource type="Script" path="res://scripts/camera.gd" id="1_p4ljw"]
[ext_resource type="PackedScene" uid="uid://c6l1fva51bbbj" path="res://scenes/level_1.tscn" id="1_wxva4"]
[ext_resource type="PackedScene" uid="uid://cbcpkii3ep0ov" path="res://scenes/player.tscn" id="2_a7ale"]
[ext_resource type="Script" path="res://scripts/Levels.gd" id="3_my2tc"]
[ext_resource type="AudioStream" uid="uid://bf8q2undvhwg3" path="res://assets/sound/bling.wav" id="6_2blpw"]
[ext_resource type="AudioStream" uid="uid://cp6og4duxynmp" path="res://assets/sound/theircoming3.ogg" id="7_pnhcp"]
[ext_resource type="AudioStream" uid="uid://qc5yx8dhbxku" path="res://assets/sound/winfretless.ogg" id="8_opdr5"]

[sub_resource type="Animation" id="Animation_yre35"]
resource_name = "camera_circle"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 6.28319, 0)]
}

[sub_resource type="Animation" id="Animation_rfrni"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, -5.08414, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_20mds"]
_data = {
"RESET": SubResource("Animation_rfrni"),
"camera_circle": SubResource("Animation_yre35")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iu7x3"]
bg_color = Color(0, 0, 0, 0.470588)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dlydb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e3651"]
bg_color = Color(0.6, 0, 0.6, 1)
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0, 0, 1)
corner_detail = 1
expand_margin_left = 40.0
expand_margin_top = 20.0
expand_margin_right = 40.0
expand_margin_bottom = 20.0
shadow_offset = Vector2(1, 1)

[node name="Game" type="Node"]
script = ExtResource("1_2dx0v")
current_level_index = 3

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 8, 0)
shadow_enabled = true

[node name="CameraGimbal" type="Node3D" parent="." node_paths=PackedStringArray("target")]
transform = Transform3D(0.363251, 0, 0.931691, 0, 1, 0, -0.931691, 0, 0.363251, 0, 0, 0)
script = ExtResource("1_p4ljw")
target = NodePath("../Player")
rotation_speed = 0.597
mouse_sensitivity = 0.001
max_zoom = 4.0
zoom_speed = 0.17

[node name="InnerGimbal" type="Node3D" parent="CameraGimbal"]

[node name="Camera3D" type="Camera3D" parent="CameraGimbal/InnerGimbal"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4)
size = 19.0
far = 1000.0

[node name="CameraAnimation" type="AnimationPlayer" parent="CameraGimbal"]
libraries = {
"": SubResource("AnimationLibrary_20mds")
}

[node name="Player" parent="." instance=ExtResource("2_a7ale")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0)
SPEED = 7.0
JUMP_VELOCITY = 3.0

[node name="Levels" type="Node" parent="." node_paths=PackedStringArray("levels")]
script = ExtResource("3_my2tc")
levels = [null, null]

[node name="Level 1" parent="Levels" instance=ExtResource("1_wxva4")]
min_distance = 2.0
max_distance = 5.5

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ScorePanel" type="Panel" parent="HUD"]
layout_mode = 1
offset_right = 372.0
offset_bottom = 209.0
mouse_filter = 2

[node name="Score" type="Label" parent="HUD/ScorePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.5
offset_top = -11.5
offset_right = 30.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 54
text = "Score: 0"

[node name="TimerPanel" type="Panel" parent="HUD"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -362.0
offset_bottom = 217.0
grow_horizontal = 0
mouse_filter = 2

[node name="Time" type="Label" parent="HUD/TimerPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.5
offset_top = -11.5
offset_right = 30.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 54
text = "00:00:00"

[node name="CountdownPanel" type="Panel" parent="HUD"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -207.5
offset_top = -935.0
offset_right = 207.5
offset_bottom = -646.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_iu7x3")

[node name="CountdownLabel" type="Label" parent="HUD/CountdownPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.5
offset_top = -132.5
offset_right = 55.5
offset_bottom = 132.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 194
text = "3"

[node name="Timer" type="Timer" parent="HUD/CountdownPanel"]
autostart = true

[node name="Bling" type="AudioStreamPlayer" parent="HUD/CountdownPanel"]
stream = ExtResource("6_2blpw")
volume_db = 10.0
pitch_scale = 1.5

[node name="Start" type="AudioStreamPlayer" parent="HUD/CountdownPanel"]
stream = ExtResource("7_pnhcp")
volume_db = 4.333

[node name="LevelCompleted" type="PanelContainer" parent="HUD"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Panel" type="Panel" parent="HUD/LevelCompleted"]
layout_mode = 2
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="HUD/LevelCompleted/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -557.5
offset_top = -180.0
offset_right = 557.5
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/LevelCompleted/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="HUD/LevelCompleted/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 119
text = "Level Complete!"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="HUD/LevelCompleted/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 60
theme_override_styles/separator = SubResource("StyleBoxEmpty_dlydb")

[node name="Button" type="Button" parent="HUD/LevelCompleted/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = SubResource("StyleBoxFlat_e3651")
text = "NEXT LEVEL"

[node name="Win" type="AudioStreamPlayer" parent="HUD/LevelCompleted"]
stream = ExtResource("8_opdr5")
volume_db = 5.0

[node name="GameOver" type="PanelContainer" parent="HUD"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="HUD/GameOver"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HUD/GameOver/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="HUD/GameOver/Panel/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 116
text = "GAME OVER
YOU WIN!"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="timeout" from="HUD/CountdownPanel/Timer" to="." method="_on_timer_timeout"]
