[gd_scene load_steps=2 format=3 uid="uid://c36l3iso68nbo"]

[ext_resource type="Script" path="res://scripts/game_manager.gd" id="1_6oj1c"]

[node name="GameManager" type="Node"]
script = ExtResource("1_6oj1c")
